# SheetBrain

./: .gitignore  pyproject.toml  requirements.txt
src/sheetbrain/: main.py  run_example.py
src/sheetbrain/core/: agent.py
src/sheetbrain/modules/: execution.py  understanding.py  validation.py
src/sheetbrain/utils/: excel_toolkit.py
