[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SheetBrain"
version = "0.1.0"
description = "SheetBrain fork"
readme = "README.md"
requires-python = ">=3.11"

#[tool.setuptools]
#package-dir = {"" = "src"}
#
#[tool.setuptools.packages.find]
#where = ["core", "config", 'modules', 'utils']

[[tool.uv.index]]
url = "https://nexus-new.dev.eleader.biz/repository/eld-pypi-registry/simple"
default = true

[[tool.uv.index]]
#url = "https://pypi.org/simple"
url = "https://nexus.tools.extentum.eu/repository/pypi/simple"

[dependency-groups]

build = ["toml"]

test = ["pytest",
        "nest_asyncio"]

sheetbrain = [
    # Core dependencies
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tiktoken>=0.5.0",

    # Visualization
    "matplotlib>=3.7.0",

    # Optional dependencies for enhanced functionality
    "python-dotenv>=1.0.0"
]